RPC - New command 'createwitnessaccount' as a convenience call to 'createaccount witness' used to create an account for witnessing.
RPC - New command 'fundwitnessaccount' used to lock funds into a witness account that has previously been created.
RPC - New command 'getwitnessinfo' used to get various info and statistics about witness system (current network weight etc.)
RPC - add new "sub_type" paramater to 'listaccounts' command.

1.6.4.8

Minor maintenence release.
UI - Introduce a new informational widget and other minor UI improvements that make it move obvious to users that the wallet is not yet available during initial sync.
UI - Add a new menu item for setting the currency.
UI - Fix a crash in the send dialog on machines with no network connection.
UI - Remove bitcoin payment option from send screen
CORE - Update checkpoints, static difficulties, static seeds and other static information to help assist new users with better syncing experience.


1.6.4.7

Minor testnet related release.

1.6.4.6

RPC - Fix an issue introduced in 1.6.4.3 which can cause users running with "-disablewallet" to experience RPC freezes when calling certain RPC commands.

1.6.4.5

UI - Fix "run on boot" links that were broken by testnet changes and other minor "run on boot" corrections.

1.6.4.1

Minor bugfix release.
UI - Some small translation changes
RPC - Add an HDIndex flag to 'listaccounts' RPC output, useful for debugging HD wallet issues.
CORE - Speed up address allocation when -keypool is set to a larger than default size.

1.6.4

CMDFLAG - Add new command line flag '-coinbasesignature' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
CMDFLAG - Add new command line flag '-accountpool' to increase the default account look ahead size. (Needed in some cases to find accounts on rescan when large account gaps are present)